# I_See_Fit_SDL2

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  build.sh  index.html  params.json  style_guide.md
cmake/: cpack.cmake  cpp.cmake  doxygen.cmake  options.cmake  settings.cmake
cmake/input/: Doxyfile.in  README.txt  WELCOME.md
doc/: CMakeLists.txt  Doxyfile.in  README.txt  WELCOME.md
doxygen/: Animation_8cpp.html  Animation_8cpp__incl.map  Animation_8cpp__incl.md5  Animation_8cpp_source.html  Animation_8h.html  Animation_8h__dep__incl.map  Animation_8h__dep__incl.md5  Animation_8h__incl.md5  Animation_8h_source.html  Assert_8cpp.html  Assert_8cpp__incl.map  Assert_8cpp__incl.md5  Assert_8cpp_source.html  Assert_8h.html  Assert_8h__dep__incl.map  Assert_8h__dep__incl.md5  Assert_8h_source.html  AudioHandler_8cpp.html  AudioHandler_8cpp__incl.map  AudioHandler_8cpp__incl.md5  AudioHandler_8cpp_source.html  AudioHandler_8h.html  AudioHandler_8h__dep__incl.map  AudioHandler_8h__dep__incl.md5  AudioHandler_8h__incl.map  AudioHandler_8h__incl.md5  AudioHandler_8h_source.html  Camera_8cpp.html  Camera_8cpp__incl.map  Camera_8cpp__incl.md5  Camera_8cpp_source.html  Camera_8h.html  Camera_8h__dep__incl.map  Camera_8h__dep__incl.md5  Camera_8h__incl.md5  Camera_8h_source.html  Collision_8cpp.html  Collision_8cpp__incl.map  Collision_8cpp__incl.md5  Collision_8cpp_source.html  (+1362 more)
doxygen/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_66.js  all_67.js  all_68.js  all_69.js  all_6b.js  all_6c.js  all_6d.js  all_6e.js  all_6f.js  all_7.js  all_70.js  all_71.js  all_72.js  all_73.js  all_74.js  all_75.js  all_77.js  all_79.js  all_7e.js  all_8.js  all_9.js  (+172 more)
include/: Animation.h  AudioHandler.h  Camera.h  Collision.h  ControllerHandler.h  FPSWrapper.h  GStatePlaceholder.h  Game.h  GameObject.h  InputHandler.h  InputKeys.h  Logger.h  Math.h  Math.tpp  Music.h  MusicManager.h  ResourceManager.h  ResourceManager.tpp  SDLUtil.h  SDLWrapper.h  SDL_Libs.h  SDL_Systems.h  SDL_Util.h  SFXManager.h  SoundEffect.h  Sprite.h  SpriteManager.h  StateGame.h  Text.h  TileMap.h  Uncopyable.h  UsefulDefines.h  Window.h
reports/: gtest-report.xml  valgrind-exec-report.xml  valgrind-gtest-report.xml  valgrind-sdl2-engine_GTest-report.xml
reports/cppcheck-reports/: 0.html  1.html  2.html  3.html  4.html  5.html  6.html  index.html  style.css
reports/cpplint-reports/: 0.html  1.html  10.html  11.html  12.html  13.html  14.html  15.html  16.html  17.html  18.html  19.html  2.html  20.html  21.html  22.html  23.html  24.html  25.html  3.html  4.html  5.html  6.html  7.html  8.html  9.html  index.html
reports/gcovr-reports/: index._home_travis_build_CaioIcy_sdl2-engine_src_Animation.cpp.html  index._home_travis_build_CaioIcy_sdl2-engine_src_AudioHandler.cpp.html  index._home_travis_build_CaioIcy_sdl2-engine_src_Camera.cpp.html  index._home_travis_build_CaioIcy_sdl2-engine_src_Collision.cpp.html  index._home_travis_build_CaioIcy_sdl2-engine_src_Configuration.cpp.html  index._home_travis_build_CaioIcy_sdl2-engine_src_ControllerHandler.cpp.html  index._home_travis_build_CaioIcy_sdl2-engine_src_GStatePlaceholder.cpp.html  index._home_travis_build_CaioIcy_sdl2-engine_src_Game.cpp.html  index._home_travis_build_CaioIcy_sdl2-engine_src_GameObject.cpp.html  index._home_travis_build_CaioIcy_sdl2-engine_src_InputHandler.cpp.html  index._home_travis_build_CaioIcy_sdl2-engine_src_Logger.cpp.html  index._home_travis_build_CaioIcy_sdl2-engine_src_Logger.h.html  index._home_travis_build_CaioIcy_sdl2-engine_src_Music.cpp.html  index._home_travis_build_CaioIcy_sdl2-engine_src_MusicManager.cpp.html  index._home_travis_build_CaioIcy_sdl2-engine_src_MusicManager.h.html  index._home_travis_build_CaioIcy_sdl2-engine_src_Renderer.cpp.html  index._home_travis_build_CaioIcy_sdl2-engine_src_ResourceHandler.cpp.html  index._home_travis_build_CaioIcy_sdl2-engine_src_ResourceManager.h.html  index._home_travis_build_CaioIcy_sdl2-engine_src_ResourceManager.tpp.html  index._home_travis_build_CaioIcy_sdl2-engine_src_SDL_Systems.cpp.html  (+52 more)
src/: Animation.cpp  Animation.h  AudioHandler.cpp  AudioHandler.h  CMakeLists.txt  Camera.cpp  Camera.h  Collision.cpp  Collision.h  Configuration.cpp  Configuration.h  ControllerHandler.cpp  ControllerHandler.h  FPSWrapper.cpp  GStatePlaceholder.cpp  GStatePlaceholder.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  InputHandler.cpp  InputHandler.h  InputKeys.h  Logger.cpp  Math.cpp  Math.h  Music.cpp  Music.h  MusicManager.cpp  Renderer.cpp  Renderer.h  ResourceHandler.cpp  ResourceHandler.h  ResourceManager.tpp  SDLUtil.cpp  SDLWrapper.cpp  SDL_Libs.h  SDL_Systems.cpp  SDL_Util.cpp  SDL_Util.h  (+17 more)
src/audio/: AudioHandler.cpp  AudioHandler.h  Music.cpp  Music.h  MusicManager.cpp  MusicManager.h  SFXManager.cpp  SFXManager.h  SoundEffect.cpp  SoundEffect.h
src/core/: ResourceManager.h  SDL_Systems.cpp  SDL_Systems.h  SdlInfo.cpp  SdlInfo.h  SdlSystems.cpp  SdlSystems.h
src/engine/: Animation.cpp  Animation.h  Camera.cpp  Camera.h  GStatePlaceholder.cpp  GStatePlaceholder.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  ResourceHandler.cpp  ResourceHandler.h  StateGame.cpp  StateGame.h  StateManager.cpp  StateManager.h  Timer.cpp  Timer.h
src/engine/states/game/: Placeholder.cpp  Placeholder.h
src/graphics/: Renderer.cpp  Renderer.h  Sprite.cpp  Sprite.h  SpriteManager.cpp  SpriteManager.h  Text.cpp  Text.h  Window.cpp  Window.h
src/input/: ControllerHandler.cpp  ControllerHandler.h  EventHandler.cpp  EventHandler.h  InputHandler.cpp  InputHandler.h  InputKeys.h
src/physics/: Collision.cpp  Collision.h
src/util/: Assert.cpp  Assert.h  Configuration.cpp  Configuration.h  Logger.cpp  Logger.h  Util.cpp
stylesheets/: styles.css
test/: CMakeLists.txt  test_dummy.cpp
utils/: after_success.sh  cppcheck-htmlreport.py  cpplint_to_cppcheckxml.py  publish_doxygen.sh
utils/travis/: install.sh  (+2 more)
(+1 files in other folders)
